<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>by.aurorasoft.nominatim</groupId>
  <artifactId>nominatim</artifactId>
  <version>1.0</version>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>2.4.3</version>
      </plugin>

      <plugin>
        <groupId>com.spotify</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <version>1.2.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>build</goal>
              <goal>push</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <imageName>cooll3r/nominatim:${project.version}-${imageLabel}</imageName>
          <baseImage>adoptopenjdk/openjdk11-openj9:alpine-slim</baseImage>
          <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
          <!-- copy the service's jar file from target into the root directory of the image -->
          <resources>
            <resource>
              <targetPath>/</targetPath>
              <directory>${project.build.directory}</directory>
              <include>${project.build.finalName}.jar</include>
            </resource>
          </resources>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>16</source>
          <target>16</target>
        </configuration>
      </plugin>

    </plugins>
  </build>
  <packaging>jar</packaging>

  <name>nominatim</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <org.postgresql.version>42.7.2</org.postgresql.version>
    <org.n52.jackson.version>1.2.10</org.n52.jackson.version>
    <com.github.NikolayNN.crud-generic.version>
      9.0
    </com.github.NikolayNN.crud-generic.version>
    <com.vladmihalcea.version>2.20.0</com.vladmihalcea.version>
    <org.wololo.version>0.18.1</org.wololo.version>
    <javax.validation.version>2.0.1.Final</javax.validation.version>
    <org.hibernate.validator.version>6.2.0.Final</org.hibernate.validator.version>
    <org.orbisgis.version>2.2.0</org.orbisgis.version>
    <distance-calculator-lib.version>5.7</distance-calculator-lib.version>
    <opencsv.version>5.7.1</opencsv.version>
    <org.testcontainers.version>1.17.6</org.testcontainers.version>
    <com.yannbriancon.version>2.0.0</com.yannbriancon.version>
    <imageLabel>DEV</imageLabel>
  </properties>

  <repositories>

    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>

  </repositories>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.0</version>
    <relativePath />
  </parent>

  <dependencies>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-hateoas</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${org.postgresql.version}</version>
    </dependency>

    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-spatial</artifactId>
    </dependency>

    <dependency>
      <groupId>org.n52.jackson</groupId>
      <artifactId>jackson-datatype-jts</artifactId>
      <version>${org.n52.jackson.version}</version>
    </dependency>

    <dependency>
      <groupId>com.github.NikolayNN.crud-generic</groupId>
      <artifactId>crud-abstract-generic</artifactId>
      <version>${com.github.NikolayNN.crud-generic.version}</version>
    </dependency>

    <dependency>
      <groupId>com.vladmihalcea</groupId>
      <artifactId>hibernate-types-52</artifactId>
      <version>${com.vladmihalcea.version}</version>
    </dependency>

    <dependency>
      <groupId>org.wololo</groupId>
      <artifactId>jts2geojson</artifactId>
      <version>${org.wololo.version}</version>
    </dependency>

    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>${javax.validation.version}</version>
    </dependency>

    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>${org.hibernate.validator.version}</version>
    </dependency>

    <dependency>
      <groupId>org.orbisgis</groupId>
      <artifactId>h2gis</artifactId>
      <version>${org.orbisgis.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-test</artifactId>
    </dependency>

    <dependency>
      <groupId>com.github.NikolayNN</groupId>
      <artifactId>distance-calculator-lib</artifactId>
      <version>${distance-calculator-lib.version}</version>
    </dependency>

    <dependency>
      <groupId>com.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>${opencsv.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-ui</artifactId>
      <version>1.6.4</version>
    </dependency>

    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-core</artifactId>
      <version>4.8.0</version>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>postgresql</artifactId>
      <version>${org.testcontainers.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.yannbriancon</groupId>
      <artifactId>spring-hibernate-query-utils</artifactId>
      <version>${com.yannbriancon.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

</project>
